crates/sverb-tui/src/app/sessions/snapshots/sverb_tui__app__sessions__reconnect__tests__t04_banner_timeout_80x24.snap
---
source: crates/sverb-tui/src/app/sessions/reconnect_tests.rs
expression: text
---
┌ web-1 ───────────────────────────────────────────────────────────────────────┐
│$ tail -f /var/log/syslog                                                     │
│Oct  8 10:00:01 web-1 CRON[42]: job ran                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│┌────────────────────────────────────────────────────────────────────────────┐│
││Disconnected (Connection lost (no response))                                ││
││[Enter] reconnect · ^g x close · ^g i details                               ││
│└────────────────────────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
